# mindweave

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PROMPT.md  README.md  SPEC.md  bugs.md  decision.md  decisions.md  docker-compose.yml  progress.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: chat.py  export.py  graph.py  ws.py
backend/app/core/: config.py  ws_manager.py
backend/app/models/: frameworks.py  schemas.py
backend/app/prompts/: system.py
backend/app/services/: chat_service.py  export_service.py  graphiti_service.py  noop_cross_encoder.py  noop_embedder.py  openrouter_graphiti_client.py
backend/tests/: test_graph_api.py  test_noop_cross_encoder.py
docs/: ARCHITECTURE.md  FRAMEWORKS.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChatPanel.tsx  ExportButton.tsx  FrameworkBadge.tsx  GraphCanvas.tsx  MessageBubble.tsx
frontend/src/hooks/: useChat.ts  useGraphData.ts  useWebSocket.ts
frontend/src/types/: index.ts
