[project]
name = "mindweave-backend"
version = "0.1.0"
description = "MindWeave thought-partner chatbot backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "graphiti-core>=0.3.0",
    "openai>=1.30.0",
    "pydantic-settings>=2.3.0",
    "pygithub>=2.3.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]
